[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/health_over_bar.png" type="Texture" id=1]
[ext_resource path="res://assets/health_progress_bar.png" type="Texture" id=2]
[ext_resource path="res://assets/health_Under_bar.png" type="Texture" id=3]
[ext_resource path="res://src/Entities/HealthBar.gd" type="Script" id=4]

[node name="UI" type="Control"]
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthBarBG" type="TextureProgress" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 136.0
margin_bottom = 48.0
value = 100.0
texture_under = ExtResource( 3 )
texture_progress = ExtResource( 2 )
tint_progress = Color( 0.784314, 0.2, 0.34902, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealhBar" type="TextureProgress" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 136.0
margin_bottom = 48.0
value = 100.0
texture_over = ExtResource( 1 )
texture_progress = ExtResource( 2 )
tint_progress = Color( 0.2, 0.784314, 0.235294, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UpdateTween" type="Tween" parent="."]
